--- a/css/main.css
+++ b/css/main.css
@@ -26,10 +26,41 @@ html {
 }
 
 .sun {
-  animation: shake 1s infinite;
+  animation: shake 5s linear infinite;
+  transform-origin: center;
+  transform: rotate(0deg);
 }
 
 @keyframes shake {
-  from { transform: shake (-50deg); }
-  to { transform: shake (50deg); }
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.earth {
+  transition: all .5s linear;
+  width: 100%;
+  transform: scale(1,1);
+}
+
+.earth-grow {
+  animation: scale .5s linear;
+}
+
+@keyframes scale {
+  0% { transform: scale(1,1); }
+  100% { transform: scale(2,2); }
+}
+
+.grass {
+  opacity: 1;
+  transition: all .5s linear;
+}
+
+.grass-fade {
+  animation: fade .5s linear;
+}
+
+@keyframes fade {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
